# meteogram

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-armhf  Dockerfile-x86  Dockerfile.template  Dockerfile.x86  Meteogram.ipynb  README.md  api-testing.http  docker-compose.yml  flask_server.py  gunicorn_config.py  pyproject.toml  setup.py
docs/: usage.md
meteogram/: __init__.py  commandline_script.py  config.yaml  constants.py  download_symbol_files.py  flask_server.py  get_weather_data.py  make_meteogram.py  schemas.py
src/meteogram/: __init__.py  api.py  commandline_script.py  constants.py  get_weather_data.py  make_meteogram.py  schemas.py
