[tool.poetry]
name = "meteogram"
version = "0.1.0"
description = "Create meteogram based on data from yr.no"
authors = ["Martin Høy <martin@hoy.priv.no>"]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.0.2"
matplotlib = "^3.4.3"
requests = "^2.26.0"
pydantic = "^1.8.2"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
scipy = "^1.7.1"
requests-cache = "^1.0.1"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^23.3"
flake8 = "^6.0"
mypy = "^1.3"
pydocstyle = "^6.1.1"
pre-commit = "^3.3"
pytest = "^7.0.0"
ipykernel = "^6.4.1"
types-requests = "^2.25.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
